--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,11 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+<ion-tabs show-tabs *ngIf="!user">
+  <ion-tab [root]="tab4Root" tabIcon="person" tabTitle="Account"></ion-tab>
+</ion-tabs>
+
+
+<ion-tabs show-tabs *ngIf="user">
+  <ion-tab [root]="tab1Root" tabIcon="heart" tabTitle="liked"></ion-tab>
+  <ion-tab [root]="tab2Root" tabIcon="male" tabTitle="Boy"></ion-tab>
+  <ion-tab [root]="tab3Root" tabIcon="female" tabTitle="Girl"></ion-tab>
+  <ion-tab [root]="tab4Root" tabIcon="cog" tabTitle="Settings"></ion-tab>
 </ion-tabs>
