--- a/src/pages/boy/boy.html
+++ b/src/pages/boy/boy.html
@@ -1,4 +1,3 @@
-<ion-content padding *ngIf="names && user && user.uid">
-  <ion-card-container [gender]="'boy'" [names]="names" [user]="user"></ion-card-container>
-  {{ user }}
+<ion-content padding *ngIf="names">
+  <ion-card-container [gender]="'boy'" [names]="names"></ion-card-container>
 </ion-content>
