--- a/src/pages/girl/girl.html
+++ b/src/pages/girl/girl.html
@@ -1,4 +1,3 @@
-<ion-content padding *ngIf="names && user && user.uid">
-  <ion-card-container [gender]="'girl'" [names]="names" [user]="user"></ion-card-container>
-  {{ user }}
+<ion-content padding *ngIf="names">
+  <ion-card-container [gender]="'girl'" [names]="names"></ion-card-container>
 </ion-content>
