--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,19 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <title>What Name</title>
+  <title>WhatName!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/favicon-16x16.png">
+  <!--<link rel="apple-touch-icon" sizes="180x180" href="assets/icon/apple-touch-icon.png">-->
+  <link rel="icon" type="image/png" sizes="36x36" href="assets/icon/android/Icon-36.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="assets/icon/android/Icon-48.png">
+  <link rel="icon" type="image/png" sizes="72x72" href="assets/icon/android/Icon-72.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="assets/icon/android/Icon-96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="assets/icon/android/Icon-192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="assets/icon/android/Icon-512.png">
+
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
