--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,5 +1,5 @@
 <ion-content *ngIf="user">
-    <ion-grid>
+    <ion-grid col-xl-8>
         <ion-row>
             <ion-col col-12 col-md-6>
                 <user></user>
