--- a/src/pages/boy/boy.html
+++ b/src/pages/boy/boy.html
@@ -1,3 +1,2 @@
-<ion-content *ngIf="names">
-    <ion-card-container [gender]="'boy'" [names]="names"></ion-card-container>
-</ion-content>
+<ion-card-container [gender]="'boy'"></ion-card-container>
+
