--- a/src/pages/girl/girl.html
+++ b/src/pages/girl/girl.html
@@ -1,3 +1,2 @@
-<ion-content *ngIf="names">
-    <ion-card-container [gender]="'girl'" [names]="names"></ion-card-container>
-</ion-content>
+<ion-card-container [gender]="'girl'"></ion-card-container>
+
