--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,15 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
+  <script src="https://code.ionicframework.com/services/ionic-pro.min.js" data-app-id="8743ab44" data-app-version="1.0.2"></script>
 
-  <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.error('Error', err));
-    }
-  </script>
+  <!--<script>-->
+    <!--if ('serviceWorker' in navigator) {-->
+      <!--navigator.serviceWorker.register('service-worker.js')-->
+        <!--.then(() => console.log('service worker installed'))-->
+        <!--.catch(err => console.error('Error', err));-->
+    <!--}-->
+  <!--</script>-->
 
   <link href="build/main.css" rel="stylesheet">
 
